[package]
name = "layer4-proxy"
version = "0.2.0"
edition = "2021"
authors = ["Jacob Kiers <code@kiers.eu>"]
license = "Apache-2.0"
description = "Simple and fast layer 4 proxy in Rust"
readme = "README.md"
homepage = "https://github.com/git001/layer4-proxy-rs"
repository = "https://github.com/git001/layer4-proxy-rs"
keywords = ["proxy", "network"]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = [".*"]

[[bin]]
name = "layer4-proxy"
path = "src/main.rs"

[dependencies]
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
pretty_env_logger = "0.5.0"
serde = { version = "~1.0", features = ["derive"] }
serde_yml = "~0.0.10"
time = { version = "0.3.1", features = ["local-offset", "formatting"] }
tls-parser = "0.11.0"
tokio = { version = "~1.0", features = ["full"] }
url = { version = "2.5.2", features = ["serde"] }
