[package]
name = "tls-proxy-tunnel"
version = "1.0.1"
edition = "2021"
authors = ["Aleksandar Lazic <al-git001@none.at>"]
license = "Apache-2.0"
description = "Simple and fast TLS-Proxy tunnel in Rust"
readme = "README.md"
homepage = "https://github.com/git001/tls-proxy-tunnel"
repository = "https://github.com/git001/tls-proxy-tunnel"
keywords = ["proxy", "network"]
categories = ["web-programming"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = [".*"]

[[bin]]
name = "tls-proxy-tunnel"
path = "src/main.rs"

[dependencies]
env_logger = "0.11.3"
futures = "0.3.30"
http-body-util = "0.1.2"
hyper = { version = "1.3.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.5", features = ["http1", "server", "service", "tokio"] }
log = "0.4.21"
serde = { version = "~1.0", features = ["derive"] }
serde_yml = "~0.0.10"
time = { version = "0.3.1", features = ["local-offset", "formatting"] }
tls-parser = "0.11.0"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["full"] }
url = { version = "2.5.2", features = ["serde"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"
